PIP-289 Update pom.xml to include --addopens in jar manifest file